--- a/platformio.ini
+++ b/platformio.ini
@@ -15,5 +15,7 @@ framework = arduino
 lib_deps = 
 	roboticsbrno/ServoESP32@^1.0.3
 	miguelbalboa/MFRC522 @ ^1.4.11
+    amcewen/HttpClient@^2.2.0
+	; adafruit/Adafruit AHTX0 @ ^2.0.5
 build_unflags = -std=gnu++11
 build_flags = -std=gnu++17
